# pypegasus-example

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
src/pypegasus_example/: __main__.py  mod1.py  mod2.py  mod3.py
test/: test_src.py
